[gd_scene load_steps=11 format=3 uid="uid://dawu648x4k7co"]

[ext_resource type="Script" uid="uid://cth0jmt58hv11" path="res://Scripts/card_manager.gd" id="1_jd0nb"]
[ext_resource type="PackedScene" uid="uid://h2sqwt4cw6ot" path="res://Scenes/pile.tscn" id="2_v5i0k"]
[ext_resource type="Environment" uid="uid://bw05ivsnsv6ri" path="res://Materials/world_environment.tres" id="2_xhfwg"]
[ext_resource type="PackedScene" uid="uid://h2tna386st2p" path="res://Scenes/central_pile.tscn" id="4_vjl2i"]
[ext_resource type="PackedScene" uid="uid://svfu46qgpv04" path="res://Scenes/lateral_pile.tscn" id="5_67vji"]
[ext_resource type="PackedScene" uid="uid://ywpcfgy1ypld" path="res://Scenes/ui.tscn" id="7_usajj"]
[ext_resource type="PackedScene" uid="uid://qlnomuyrp2jb" path="res://Scenes/pause_menu.tscn" id="8_o4lkm"]
[ext_resource type="AudioStream" uid="uid://cwiuqfhot11l4" path="res://Assets/Audio/switch_004.ogg" id="9_xexre"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_xhfwg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nxs2u"]
albedo_color = Color(0.0739636, 0.246661, 0.0429552, 1)

[node name="Solitaire" type="Node3D" groups=["manager"]]
script = ExtResource("1_jd0nb")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_xhfwg")
camera_attributes = SubResource("CameraAttributesPractical_xhfwg")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.452217, 0.891908, 0, -0.891908, 0.452217, 0.709846, 18.7969, 10.6043)
environment = ExtResource("2_xhfwg")
current = true
fov = 70.0
size = 30.0
near = 0.064
far = 2000.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.622349, -0.747926, 0.230844, -0.720114, -0.4315, 0.543363, -0.306786, -0.504395, -0.807135, -6.31388, 30.2579, -15.2779)
light_energy = 0.857
shadow_enabled = true
shadow_bias = 0.19
directional_shadow_fade_start = 1.0
directional_shadow_max_distance = 519.8

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.000418887, 1, 0, -1, 0.000418887, 0.455505, 8.01022, 1.78825)
light_energy = 1.074
light_indirect_energy = 1.342
light_volumetric_fog_energy = 2.273
spot_range = 69.6589
spot_attenuation = -0.14
spot_angle = 69.2839
spot_angle_attenuation = 1.93187

[node name="Table" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15.0354)
size = Vector3(150, 0.5, 80.9214)
material = SubResource("StandardMaterial3D_nxs2u")

[node name="GameStart" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="Shuffle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xexre")

[node name="Zones" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.335509, -0.928246)

[node name="HeartsPile" parent="Zones" groups=["piles", "special_piles"] instance=ExtResource("4_vjl2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.09072, 0.6, -7.14403)
suit = 3

[node name="DiamondsPile" parent="Zones" groups=["piles", "special_piles"] instance=ExtResource("4_vjl2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.09072, 0.6, -1.14403)
suit = 2

[node name="ClubsPile" parent="Zones" groups=["piles", "special_piles"] instance=ExtResource("4_vjl2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.09072, 0.6, 4.85597)

[node name="SpadesPile" parent="Zones" groups=["piles", "special_piles"] instance=ExtResource("4_vjl2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.09072, 0.6, 10.856)
suit = 1

[node name="A1" parent="Zones" groups=["piles"] instance=ExtResource("5_67vji")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.90928, 0.6, -7.14403)
GROWTH_DIRECTION = false
pile_offset = 0.7

[node name="A2" parent="Zones" groups=["piles"] instance=ExtResource("5_67vji")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.90928, 0.6, -1.14403)
GROWTH_DIRECTION = false
pile_offset = 0.7

[node name="A3" parent="Zones" groups=["piles"] instance=ExtResource("5_67vji")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.90928, 0.6, 4.85597)
GROWTH_DIRECTION = false
pile_offset = 0.7

[node name="A4" parent="Zones" groups=["piles"] instance=ExtResource("5_67vji")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.90928, 0.6, 10.856)
GROWTH_DIRECTION = false
pile_offset = 0.7

[node name="B1" parent="Zones" groups=["piles"] instance=ExtResource("5_67vji")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.09072, 0.6, -7.14403)
pile_offset = 0.7

[node name="B2" parent="Zones" groups=["piles"] instance=ExtResource("5_67vji")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.09072, 0.6, -1.14403)
pile_offset = 0.7

[node name="B3" parent="Zones" groups=["piles"] instance=ExtResource("5_67vji")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.09072, 0.6, 4.85597)
pile_offset = 0.7

[node name="B4" parent="Zones" groups=["piles"] instance=ExtResource("5_67vji")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.09072, 0.6, 10.856)
pile_offset = 0.7

[node name="Deck" parent="Zones" groups=["piles"] instance=ExtResource("2_v5i0k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.3194, 0.6, -7.14403)

[node name="InputBlocker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 3

[node name="GameUI" parent="." instance=ExtResource("7_usajj")]

[node name="PauseMenu" parent="." instance=ExtResource("8_o4lkm")]
process_mode = 3

[connection signal="game_over" from="." to="." method="_on_game_over"]
[connection signal="game_over" from="." to="GameUI" method="_on_solitaire_game_over"]
[connection signal="game_over" from="." to="GameUI/MenuPanel/ScoreTime/ElapsedTimeLabel" method="_on_solitaire_game_over"]
[connection signal="ui_update_move_count" from="." to="GameUI" method="_on_solitaire_ui_update_move_count"]
[connection signal="ui_update_time" from="." to="GameUI" method="_on_solitaire_ui_update_time"]
[connection signal="timeout" from="GameStart" to="." method="_on_game_start_timeout"]
